--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             </div>
             <div class="tablet-hide">
               <a
-                href="https://webflow.com/templates/html/thor-saas-website-template"
+                href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
                 class="button nav dropdown w-button"
                 >Purchase Premium</a
               >
